3D: Hide scatterdatapoints if series is hidden

Task-number: QTBUG-131136
Change-Id: I6a9deba8e4adc7fc3462acfb77a0259dd6c0aa50
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
(cherry picked from commit e7426f2d43482b3158b211e8e33cb508549ba31b)